--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 
             <h3 class="resume-title">Ta'lim</h3>
             <div class="resume-item">
-              <h4>191 Davlat umumta'lim maktabi</h4>
+              <h4>191-davlat umumta'lim maktabi</h4>
               <h5>2011 - 2014</h5>
              <!--  <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
               <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p> -->
